--- a/index.html
+++ b/index.html
@@ -64,7 +64,83 @@
 
   <main>
     <!-- practice-area -->
-    <section></section>
+    <section class="max-w-[1170px] mx-auto my-32">
+      <!-- section-header -->
+      <div class="w-1/2 text-center mx-auto">
+        <h3 class="font-[EbGaramond] text-[40px] font-extrabold">The Legal Practice Area</h3>
+        <p class="text-[#707070] text-[16px] font-normal mt-6">There are many variations of passages of Lorem Ipsum
+          available, but the majority have suffered alteration in
+          some form,
+          by injected humour.</p>
+      </div>
+      <div class="grid grid-cols-3 mt-14">
+        <div class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300">
+          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="text-center space-y-6">
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+            by injected humour.</p>
+            <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
+          </div>
+        </div>
+
+        <div class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300 bg-gradient-to-bl from-[#F3F3F3] to-[#F3F3F30]">
+          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="text-center space-y-6">
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+              Ipsum available, but the majority have suffered alteration in some form,
+              by injected humour.</p>
+            <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
+          </div>
+        </div>
+
+        <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center border-b-1 border-b-gray-300">
+          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="text-center space-y-6">
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+              Ipsum available, but the majority have suffered alteration in some form,
+              by injected humour.</p>
+            <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
+          </div>
+        </div>
+
+        <div class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300">
+          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="text-center space-y-6">
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+              Ipsum available, but the majority have suffered alteration in some form,
+              by injected humour.</p>
+            <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
+          </div>
+        </div>
+        
+        <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center border-r-1 border-r-gray-300">
+          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="text-center space-y-6">
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+              Ipsum available, but the majority have suffered alteration in some form,
+              by injected humour.</p>
+            <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
+          </div>
+        </div>
+        
+        <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center">
+          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="text-center space-y-6">
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+              Ipsum available, but the majority have suffered alteration in some form,
+              by injected humour.</p>
+            <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
+          </div>
+        </div>
+
+      </div>
+    </section>
     <!-- client -->
     <section></section>
     <!-- question -->
