added contact section with form

--- a/index.html
+++ b/index.html
@@ -74,21 +74,25 @@
           by injected humour.</p>
       </div>
       <div class="grid grid-cols-3 mt-14">
-        <div class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300">
+        <div
+          class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300">
           <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
           <div class="text-center space-y-6">
             <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
-            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-            by injected humour.</p>
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
+              Lorem Ipsum available, but the majority have suffered alteration in some form,
+              by injected humour.</p>
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
 
-        <div class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300 bg-gradient-to-bl from-[#F3F3F3] to-[#F3F3F30]">
+        <div
+          class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300 bg-gradient-to-bl from-[#F3F3F3] to-[#F3F3F30]">
           <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
           <div class="text-center space-y-6">
             <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
-            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
+              Lorem
               Ipsum available, but the majority have suffered alteration in some form,
               by injected humour.</p>
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
@@ -99,7 +103,8 @@
           <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
           <div class="text-center space-y-6">
             <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
-            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
+              Lorem
               Ipsum available, but the majority have suffered alteration in some form,
               by injected humour.</p>
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
@@ -110,29 +115,32 @@
           <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
           <div class="text-center space-y-6">
             <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
-            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
+              Lorem
               Ipsum available, but the majority have suffered alteration in some form,
               by injected humour.</p>
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-        
+
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center border-r-1 border-r-gray-300">
           <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
           <div class="text-center space-y-6">
             <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
-            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
+              Lorem
               Ipsum available, but the majority have suffered alteration in some form,
               by injected humour.</p>
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-        
+
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center">
           <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
           <div class="text-center space-y-6">
             <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
-            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of Lorem
+            <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
+              Lorem
               Ipsum available, but the majority have suffered alteration in some form,
               by injected humour.</p>
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
@@ -146,7 +154,63 @@
     <!-- question -->
     <section></section>
     <!-- contact -->
-    <section></section>
+    <section class="max-w-[1170px] mx-auto my-32">
+      <!-- section-header -->
+      <div class="w-1/2 text-center mx-auto">
+        <h3 class="font-[EbGaramond] text-[40px] font-extrabold">Contact With Us</h3>
+        <p class="text-[#707070] text-[16px] font-normal mt-6">There are many variations of passages of Lorem Ipsum
+          available, but the majority have suffered alteration in some form,
+          by injected humour..</p>
+      </div>
+      <div class="flex gap-8 items-center mt-16">
+        <div class="grid grid-cols-2 bg-[#F3F3F3] w-[50%]">
+          <div class="p-[50px] flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300">
+            <div class="mb-[30px]"><img src="./images/location.png" alt=""></div>
+            <div class="text-center space-y-6">
+              <h4 class="font-[EbGaramond] text-[24px] font-extrabold">Address</h4>
+              <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">A108 Adam Street, <br>
+                New York, NY 535022</p>
+            </div>
+          </div>
+
+          <div class="p-[50px] flex flex-col items-center border-b-1 border-b-gray-300">
+            <div class="mb-[30px]"><img src="./images/call.png" alt=""></div>
+            <div class="text-center space-y-6">
+              <h4 class="font-[EbGaramond] text-[24px] font-extrabold">Call Us</h4>
+              <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">+88 01750 00 00 00 <br>
+                +88 01750 00 00 00</p>
+            </div>
+          </div>
+
+          <div class=" p-[50px] flex flex-col items-center border-r-1 border-r-gray-300">
+            <div class="mb-[30px]"><img src="./images/email.png" alt=""></div>
+            <div class="text-center space-y-6">
+              <h4 class="font-[EbGaramond] text-[24px] font-extrabold">Email Us</h4>
+              <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">info@gmail.com <br>
+                info@gmail.com</p>
+            </div>
+          </div>
+
+          <div class="p-[50px] flex flex-col items-center">
+            <div class="mb-[30px]"><img src="./images/time.png" alt=""></div>
+            <div class="text-center space-y-6">
+              <h4 class="font-[EbGaramond] text-[24px] font-extrabold">Working Hours</h4>
+              <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">Mon-Fri: 9AM to 5PM <br>
+                Sunday: 9AM to 1 PM</p>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-col w-[50%] gap-7">
+          <input required type="text" placeholder="Your Name" class="p-[20px] bg-[#F3F3F3] focus:outline-0">
+          <input required type="email" placeholder="Your Email" class="p-[20px] bg-[#F3F3F3] focus:outline-0">
+          <input type="text" placeholder="Subject" class="p-[20px] bg-[#F3F3F3] focus:outline-0">
+          <textarea name="" id="" rows="6" placeholder="Your Message"
+            class="p-[20px] bg-[#F3F3F3] focus:outline-0"></textarea>
+          <input type="submit" value="Send Message"
+            class="py-5 px-7 bg-[#B68C5A] text-[18px] rounded-[8px] text-white font-semibold"></input>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
