added new hover, animation and footer section

--- a/index.html
+++ b/index.html
@@ -25,20 +25,23 @@
         <img src="./images/logo2.png" alt="brand-logo">
       </div>
       <ul class="navbar flex gap-7">
-        <li class="nav-items"><a href="" class="nav-links text-[#707070] text-[16px]">Home<i></i></a></li>
+        <li class="nav-items"><a href=""
+            class="nav-links text-[#707070] text-[16px] transition duration- hover:text-black">Home</a></li>
         <li class="nav-items flex items-center gap-1"><a href=""
-            class="nav-links text-[#707070] text-[16px] ">Services</a><i
+            class="nav-links text-[#707070] text-[16px] transition duration- hover:text-black">Services</a><i
             class="fa-solid fa-angle-right text-[#707070] text-[18px]"></i></li>
         <li class="nav-items flex items-center gap-1"><a href=""
-            class="nav-links text-[#707070] text-[16px] ">Cases</a><i
+            class="nav-links text-[#707070] text-[16px] transition duration- hover:text-black">Cases</a><i
             class="fa-solid fa-angle-right text-[#707070] text-[18px]"></i></li>
         <li class="nav-items flex items-center gap-1"><a href=""
-            class="nav-links text-[#707070] text-[16px] ">Blog</a><i
+            class="nav-links text-[#707070] text-[16px] transition duration- hover:text-black">Blog</a><i
             class="fa-solid fa-angle-right text-[#707070] text-[18px]"></i></li>
-        <li class="nav-items flex items-center gap-1"><a href="" class="nav-links text-[#707070] text-[16px] ">Contact
+        <li class="nav-items flex items-center gap-1"><a href=""
+            class="nav-links text-[#707070] text-[16px] transition duration- hover:text-black">Contact
             Us</a><i class="fa-solid fa-angle-right text-[#707070] text-[18px]"></i></li>
       </ul>
-      <button class="py-5 px-7 bg-[#B68C5A] text-[18px] rounded-[8px] text-white font-semibold">Free
+      <button
+        class="cursor-pointer py-5 px-7 bg-[#B68C5A] text-[18px] rounded-[8px] text-white font-semibold transition duration-500 hover:scale-[90%]">Free
         Consultation</button>
     </nav>
 
@@ -54,8 +57,9 @@
             by injected humour.</p>
           <div class="flex gap-6 justify-center items-center  ">
             <input type="text" placeholder="Search your services"
-              class="bg-white p-[20px] focus:outline-0 placeholder:text-[#A0A0A0] w-[70%] text-black">
-            <button class="py-[15px] px-[30px] bg-[#B68C5A] text-white w-[20%]">Search</button>
+              class="bg-white p-[20px] focus:outline-0 placeholder:text-[#A0A0A0] w-[70%] text-black rounded-md">
+            <button
+              class="py-[18px] px-[30px] bg-[#B68C5A] text-white w-[20%] transition duration-500 hover:scale-[90%] text-[18px] rounded-md cursor-pointer">Search</button>
           </div>
         </div>
       </div>
@@ -88,9 +92,9 @@
 
         <div
           class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300 bg-gradient-to-bl from-[#F3F3F3] to-[#F3F3F30]">
-          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="mb-[30px]"><img src="./images/criminal.png" alt="criminal-law"></div>
           <div class="text-center space-y-6">
-            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Criminal Law</h4>
             <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
               Lorem
               Ipsum available, but the majority have suffered alteration in some form,
@@ -98,11 +102,11 @@
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-
+        
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center border-b-1 border-b-gray-300">
-          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="mb-[30px]"><img src="./images/child.png" alt="child-support-law"></div>
           <div class="text-center space-y-6">
-            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Child Support</h4>
             <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
               Lorem
               Ipsum available, but the majority have suffered alteration in some form,
@@ -112,9 +116,9 @@
         </div>
 
         <div class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300">
-          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="mb-[30px]"><img src="./images/education.png" alt="educational-law"></div>
           <div class="text-center space-y-6">
-            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Educational Law</h4>
             <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
               Lorem
               Ipsum available, but the majority have suffered alteration in some form,
@@ -124,9 +128,9 @@
         </div>
 
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center border-r-1 border-r-gray-300">
-          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="mb-[30px]"><img src="./images/divorce.png" alt="divorce-law"></div>
           <div class="text-center space-y-6">
-            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Divorce Law</h4>
             <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
               Lorem
               Ipsum available, but the majority have suffered alteration in some form,
@@ -136,9 +140,9 @@
         </div>
 
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center">
-          <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
+          <div class="mb-[30px]"><img src="./images/tax.png" alt="Tax-law"></div>
           <div class="text-center space-y-6">
-            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Business Law</h4>
+            <h4 class="font-[EbGaramond] text-[32px] font-extrabold">Tax Law</h4>
             <p class="font-[Poppins] text-[16px] font-normal text-[#707070]">There are many variations of passages of
               Lorem
               Ipsum available, but the majority have suffered alteration in some form,
@@ -207,12 +211,82 @@
           <textarea name="" id="" rows="6" placeholder="Your Message"
             class="p-[20px] bg-[#F3F3F3] focus:outline-0"></textarea>
           <input type="submit" value="Send Message"
-            class="py-5 px-7 bg-[#B68C5A] text-[18px] rounded-[8px] text-white font-semibold"></input>
+            class="py-5 px-7 bg-[#B68C5A] text-[18px] rounded-[8px] text-white font-semibold cursor-pointer transition duration-500 hover:bg-black"></input>
         </div>
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer class="bg-[#111111] pt-[120px] pb-[100px]">
+    <section class="max-w-[1170px] mx-auto grid grid-cols-4 gap-[80px]">
+      <!-- column-1 -->
+      <div class="space-y-8">
+        <div><img src="./images/logo.png" alt=""></div>
+        <p class="text-[#CFCFCF] text-[14px] ">There are many variations of passages of Lorem Ipsum available, but the
+          majority have suffered alteration in some form,
+          by injected humour.</p>
+      </div>
+      <!-- column-2 -->
+      <div>
+        <div class="mb-[47px]">
+          <h5 class="text-[24px] text-white font-[EBGaramond] font-extrabold">Usefull Link</h5>
+        </div>
+        <ul class="space-y-5">
+          <li><a href="#"
+              class="text-[#CFCFCF] text-[14px] font-normal transition-colors duration-500 hover:text-white">Home</a>
+          </li>
+          <li><a href="#"
+              class="text-[#CFCFCF] text-[14px] font-normal transition-colors duration-500 hover:text-white">About
+              Us</a></li>
+          <li><a href="#"
+              class="text-[#CFCFCF] text-[14px] font-normal transition-colors duration-500 hover:text-white">Cases</a>
+          </li>
+          <li><a href="#"
+              class="text-[#CFCFCF] text-[14px] font-normal transition-colors duration-500 hover:text-white">Blogs</a>
+          </li>
+          <li><a href="#"
+              class="text-[#CFCFCF] text-[14px] font-normal transition-colors duration-500 hover:text-white">Contact
+              Us</a></li>
+        </ul>
+      </div>
+      <!-- column-3 -->
+      <div>
+        <div class="mb-[47px]">
+          <h5 class="text-[24px] text-white font-[EBGaramond] font-extrabold">Contact Now</h5>
+        </div>
+        <div class="text-[#CFCFCF] text-[14px] space-y-4">
+          <div>
+            <p class="text-[#CFCFCF] text-[14px] font-normal">555 4th 5t NW, Washington <br>
+              DC 20530, United States</p>
+          </div>
+          <div>
+            <p class="text-[#CFCFCF] text-[14px] font-normal">+88 01750 000 000 <br>
+              +88 01750 000 000s</p>
+          </div>
+          <div>
+            <p class="text-[#CFCFCF] text-[14px] font-normal">info@gmail.com <br>
+              info@gmail.com</p>
+          </div>
+        </div>
+      </div>
+      <!-- column-4 -->
+      <div>
+        <div class="mb-[47px]">
+          <h5 class="text-[24px] text-white font-[EBGaramond] font-extrabold">Subscribe</h5>
+        </div>
+        <div class="space-y-5">
+          <p class="text-[#CFCFCF] text-[14px] font-normal">Subscribe for our latest & Articles. We Won’t Give You Spam
+            Mails</p>
+          <div class="flex">
+            <input type="text" placeholder="Email Address"
+              class="bg-[#FFFFFF] rounded-md p-5 focus:outline-0">
+            <button class="p-5 bg-[#B68C5A] rounded-md relative right-4 cursor-pointer transition duration-500 hover:translate-x-[-10px]"><i
+                class="fa-solid fa-paper-plane text-white"></i></button>
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </footer>
 </body>
 
 </html>
