--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           some form,
           by injected humour.</p>
       </div>
-      <div class="grid grid-cols-3 mt-14">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-14">
         <div
           class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300">
           <div class="mb-[30px]"><img src="./images/business.png" alt=""></div>
@@ -89,7 +89,7 @@
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-
+        <!-- criminal-law -->
         <div
           class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300 border-b-1 border-b-gray-300 bg-gradient-to-bl from-[#F3F3F3] to-[#F3F3F30]">
           <div class="mb-[30px]"><img src="./images/criminal.png" alt="criminal-law"></div>
@@ -102,7 +102,7 @@
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-        
+        <!-- child support law -->
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center border-b-1 border-b-gray-300">
           <div class="mb-[30px]"><img src="./images/child.png" alt="child-support-law"></div>
           <div class="text-center space-y-6">
@@ -114,7 +114,7 @@
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-
+        <!-- educational law -->
         <div class="w-[400px] h-[500px] p-16 flex flex-col items-center border-r-1 border-r-gray-300">
           <div class="mb-[30px]"><img src="./images/education.png" alt="educational-law"></div>
           <div class="text-center space-y-6">
@@ -126,7 +126,7 @@
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-
+        <!-- divorce law -->
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center border-r-1 border-r-gray-300">
           <div class="mb-[30px]"><img src="./images/divorce.png" alt="divorce-law"></div>
           <div class="text-center space-y-6">
@@ -138,7 +138,7 @@
             <div><i class="fas fa-arrow-right p-2 bg-[#B68C5A] rounded-full text-white"></i></div>
           </div>
         </div>
-
+        <!-- tax-law  -->
         <div class="w-[400px] h-[500px]  p-16 flex flex-col items-center">
           <div class="mb-[30px]"><img src="./images/tax.png" alt="Tax-law"></div>
           <div class="text-center space-y-6">
@@ -153,16 +153,47 @@
 
       </div>
     </section>
+
     <!-- client -->
-    <section></section>
+    <section class="max-w-[1170px] mx-auto my-32">
+      <!-- section-heading -->
+      <div class="w-1/2 text-center mx-auto">
+        <h3 class="font-[EbGaramond] text-[40px] font-extrabold">What Our Client Say</h3>
+        <p class="text-[#707070] text-[16px] font-normal mt-6">There are many variations of passages of Lorem Ipsum
+          available, but the majority have suffered alteration in some form,
+          by injected humour.</p>
+      </div>
+      <!-- client-review-content -->
+      <div class="relative mt-10">
+        <div style="background:linear-gradient(rgba(17, 17, 17, 0.8)),url(./images/banner.png);"
+          class="py-[96px] px-[135px]">
+          <div class="flex justify-center items-center flex-col">
+            <div class="mb-5"">
+              <img src=" ./images/person.png" alt="">
+            </div>
+            <h6 class="font-[EbGaramond] text-[24px] text-white font-extrabold">Awlad Hossain</h6>
+            <p class="text-white text-[16px] font-normal mb-8"">UIX Designer</p>
+            <p class=" text-center text-[#F3F3F3] text-[15px] font-normal mb-10 ">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+            <img src=" ./images/scroll-bar.png" alt="" class="mt-16">
+          </div>
+        </div>
+        <div>
+          <i class="fas fa-angle-left absolute top-2/4 left-15 text-white text-[20px]"></i>
+          <i class="fas fa-angle-right absolute top-2/4 right-15 text-white text-[20px]"></i>
+        </div>
+      </div>
+    </section>
+
     <!-- question -->
     <section></section>
+
     <!-- contact -->
-    <section class="max-w-[1170px] mx-auto my-32">
+    <section class=" max-w-[1170px] mx-auto my-32">
       <!-- section-header -->
       <div class="w-1/2 text-center mx-auto">
         <h3 class="font-[EbGaramond] text-[40px] font-extrabold">Contact With Us</h3>
-        <p class="text-[#707070] text-[16px] font-normal mt-6">There are many variations of passages of Lorem Ipsum
+        <p class="text-[#707070] text-[16px] font-normal mt-6">There are many variations of passages of Lorem
+          Ipsum
           available, but the majority have suffered alteration in some form,
           by injected humour..</p>
       </div>
@@ -277,9 +308,9 @@
           <p class="text-[#CFCFCF] text-[14px] font-normal">Subscribe for our latest & Articles. We Won’t Give You Spam
             Mails</p>
           <div class="flex">
-            <input type="text" placeholder="Email Address"
-              class="bg-[#FFFFFF] rounded-md p-5 focus:outline-0">
-            <button class="p-5 bg-[#B68C5A] rounded-md relative right-4 cursor-pointer transition duration-500 hover:translate-x-[-10px]"><i
+            <input type="text" placeholder="Email Address" class="bg-[#FFFFFF] rounded-md p-5 focus:outline-0">
+            <button
+              class="p-5 bg-[#B68C5A] rounded-md relative right-4 cursor-pointer transition duration-500 hover:translate-x-[-10px]"><i
                 class="fa-solid fa-paper-plane text-white"></i></button>
           </div>
         </div>
