added new section: faq and question

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<body class="font-[Poppins]">
+<body class="font-[Poppins] scroll-smooth">
   <header class="max-w-[1170px] mx-auto">
     <!-- navigation -->
     <nav class="my-12 flex items-center justify-between font-[Poppins]">
@@ -166,7 +166,7 @@
       <!-- client-review-content -->
       <div class="relative mt-10">
         <div style="background:linear-gradient(rgba(17, 17, 17, 0.8)),url(./images/banner.png);"
-          class="py-[96px] px-[135px]">
+          class="py-[96px] px-[135px] rounded-[8px]">
           <div class="flex justify-center items-center flex-col">
             <div class="mb-5"">
               <img src=" ./images/person.png" alt="">
@@ -185,7 +185,56 @@
     </section>
 
     <!-- question -->
-    <section></section>
+    <section class="max-w-[1170px] mx-auto">
+      <!-- section-heading -->
+      <div class="w-1/2 text-center mx-auto">
+        <h3 class="font-[EbGaramond] text-[40px] font-extrabold">What Our Client Say</h3>
+        <p class="text-[#707070] text-[16px] font-normal mt-6">There are many variations of passages of Lorem Ipsum
+          available, but the majority have suffered alteration in some form,
+          by injected humour.</p>
+      </div>
+      <!-- question-conteainer -->
+      <div class="md:flex items-center justify-between gap-8 mt-16">
+        <div class="w-[570px] space-y-7">
+          <!-- card-1  -->
+          <div class="p-8 bg-[#F3F3F3] relative">
+            <h4 class="font-[EbGaramond] text-[24px] text-[#414040] font-extrabold mb-4">Are application fee waivers
+              available?
+            </h4>
+            <p class="text-[14px] text-[#707070]">There are many variations of passages of Lorem Ipsum available, but
+              the majority
+              have suffered alteration in some form,
+              by injected humour, .</p>
+            <i class="fa-solid fa-minus absolute right-[32px] top-[40px] text-[24px]"></i>
+          </div>
+          <!-- card-2 -->
+          <div class="p-8 bg-[#F3F3F3] relative">
+            <h4 class="font-[EbGaramond] text-[24px] text-[#414040] font-extrabold mb-4">Are application fee waivers
+              available?
+            </h4>
+            <i class="fa-solid fa-plus absolute right-[32px] top-[40px] text-[24px]"></i>
+          </div>
+          <!-- card-3 -->
+          <div class="p-8 bg-[#F3F3F3] relative">
+            <h4 class="font-[EbGaramond] text-[24px] text-[#414040] font-extrabold mb-4">Are application fee waivers
+              available?
+            </h4>
+            <i class="fa-solid fa-plus absolute right-[32px] top-[40px] text-[24px]"></i>
+          </div>
+          <!-- card-4 -->
+          <div class="p-8 bg-[#F3F3F3] relative">
+            <h4 class="font-[EbGaramond] text-[24px] text-[#414040] font-extrabold mb-4">Are application fee waivers
+              available?
+            </h4>
+            <i class="fa-solid fa-plus absolute right-[32px] top-[40px] text-[24px]"></i>
+          </div>
+        </div>
+        <div>
+          <img src="./images/faq.png" alt="" class="w-full">
+        </div>
+      </div>
+      <div></div>
+    </section>
 
     <!-- contact -->
     <section class=" max-w-[1170px] mx-auto my-32">
